--- a/styles/style.css
+++ b/styles/style.css
@@ -7,35 +7,25 @@
   background-color: #32cd32;
 }
 
-/* Style the buttons that are used to open the tab content */
-.tab button {
-  background-color: inherit;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-  background-color: #ddd;
-}
-
-/* Create an active/current tablink class */
-.tab button.active {
-  background-color: #ccc;
-}
-
 /* Style the tab content */
 .tabcontent {
   display: none;
   padding: 6px 12px;
   border: 1px solid #ccc;
-  border-top: none;
+  border-left: none;
+  border-right: none;
   background-color:white;
 }
+
+.tabcontentmain{
+  display: block;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-left: none;
+  border-right: none;
+  background-color:white;
+}
+
 
 body{
 	font-family:Arial;
@@ -47,10 +37,22 @@ body{
 	left:25%;
 	width:46%;
 	background-color:white;
-	height: 100%;
 }
 
 .footer{
-	position:absolute;
-	bottom: 10px;
+	float: bottom;
+	padding: 10px;
+}
+
+img{
+	width: 160px;
+	height: 90px;
+}
+
+h1{
+	padding: 10px;
+}
+
+.category{
+	display: none;
 }
